2005-06-08  Alex Roitman  <shura@gramps-project.org>
	* src/gramps_main.py (init_interface): Set proper color for new icons.
	* src/gramps.glade (gramps): Label new buttons, left-align labels.
	* src/GrampsDbBase.py (get_event_column_order): Show date column.
	* src/EventView.py (Module): Add "Last Changed" column; do not
	hard-code handle column.
	* src/DisplayModels.py (EventModel.__init__): Switch column order.

	* src/EventView.py (Module): Remove extra column.
	* src/EventEdit.py (EventEditor.__init__): Remove obsolete code.
	
	* src/gramps.glade (Marriage): Re-work dialog similar to EditPerson.
	* src/Utils.py (family_event_roles): Add mapping.
	* src/RelLib.py (EventRef): Add FAMILY role.
	* src/Marriage.py: Start using Listbox, so far for Events only.
	* src/ListBox.py: Support both person and family primaries.
	* src/EventEdit.py: Support both person and family primaries.
	* src/EditPerson.py (on_apply_person_clicked): Do not commit
	event, as this is done in the editor.

2005-06-08  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EventView.py (column_names): Add missing column
	* src/RepositoryView.py (column_names): Add missing columns
	* src/GrampsDbBase.py: fix column_order methods
	* src/DisplayModels.py (RepositoryModel): Remove parish column because
	it is not editable anyway
	* src/gramps_main.py (column_order): add Repository View;
	(init_interface): Remove unneeded callback

2005-06-08  Alex Roitman  <shura@gramps-project.org>
	* src/ChooseParens.py: Support for (int,str) relationships.
	* src/FamilyView.py (new_child_after_edit): Use tuple relationships.
	* src/SelectChild.py: Support for (int,str) relationships.
	* src/gramps.glade (selec_child,modparents,familyDialog): Replace
	ComboBoxes with ComboBoxEntries.
	* src/RelLib.py (add_parent_family_handle,
	change_parent_family_handle): Correct the docstring to reflect
	tuple relationships.

2005-06-07  Alex Roitman  <shura@gramps-project.org>